1.1.2-final unreleased
======================

 * Changed integration tests to test Unicode titles instead of plain ascii.
   [hannosch]

 * Added review state coloring to atct_topic_view. This closes
   http://dev.plone.org/plone/ticket/5481.
   [hannosch]

 * Added i18n statement to atct_topic_view content, as for example review states
   and type names should be translated here as well. This closes
   http://dev.plone.org/plone/ticket/5436.
   [hannosch]

 * Fixed selection criteria to allow Unicode values. This fixes
   http://dev.plone.org/plone/ticket/5229.
   [hannosch]

 * Don't setup a 'ATCT Setup' control panel category anymore, it's not used.
   [hannosch]

1.1.1-final 2006-06-08
======================

 * Changed two logging.PROBLEM to logging.WARNING. PROBLEM level was zLOG only.
   [hannosch]

1.1.0-final 2006-06-03
======================

 * Added TextIndexNG3 to list of indexes.
   [ajung]

 * Moved css rules for the photo album view inside Plone's public.css, instead
   of having them inline in the template. This way they can be overridden.
   This closes http://dev.plone.org/plone/ticket/4765.
   [hannosch]

 * Made ATTopic queryCatalog properly support b_size, thanks to patch from
   Bader. Fixes http://dev.plone.org/plone/ticket/5526
   [alecm]

 * Removed the unused locales folder. Translation files are part of the
   PloneTranslation product.
   [hannosch]

 * Uploading HTML via WebDAV now supports reading <title> tag to use
   as the title of the new content item.
   http://dev.plone.org/plone/ticket/4877
   [rocky]

 * Semi-intelligent sniffing adding for figuring out the charset
   when using mx.Tidy.  This closes
   http://dev.plone.org/plone/ticket/5006
   [rocky]

 * Internal links didn't work for event url field. This closes
   http://dev.plone.org/plone/ticket/5004
   [hannosch]

 * Various fixes for the iCal/vCal export (thx Steve for the patch):
    - timezone problems
    - folding lines longer than 75 octests (per RFC)