@@ -143,14 +143,8 @@
       description The location of an item in the site (path)
       enabled on
       criterion ATPathCriterion
-    </index>
-    <index>
-      name path
-      friendlyName Relative Location
-      description The location of an item in the site (path) relative to the smart folder's location.
-      enabled on
       criterion ATRelativePathCriterion
-    </index>    
+    </index>
     <index>
       name portal_type
       friendlyName Item Type (internal)
